fixed notes alignment

--- a/18_notes_app/style.css
+++ b/18_notes_app/style.css
@@ -61,6 +61,7 @@ main {
 .container {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-evenly;
 	align-content: flex-start;
 	gap: 25px;
 }
